# deepalpha-club-data

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
.claude/: settings.json
config/: greenhouse_slugs.yaml  nasdaq100_tickers.yaml  qqq_tickers.yaml  youtube_channels.yaml  youtube_cookies.txt
docker/: .env.example  Dockerfile  docker-compose.yml  prometheus.yml
docs/: deepalpha_spec.docx  yfinance 完整参考文档  美股概念股池方案总结.docx
docs/superpowers/plans/: 2026-05-14-deepalpha-l0l1l2-framework.md  2026-05-25-canonical-data-model.md  2026-05-30-fmp-data-loader-foundation.md  2026-05-31-concept-stock-pool.md  2026-05-31-domain-model-loader-refactor.md  2026-05-31-fmp-data-loader-foundation.md  2026-06-01-frontend-nextjs.md  2026-06-01-hexagonal-arch-backend.md  2026-06-07-core-logging.md  2026-06-07-signal-radar.md  2026-06-13-earnings-call-calendar.md
docs/superpowers/specs/: 2026-05-14-deepalpha-l0l1l2-design.md  2026-05-25-canonical-data-model-design.md  2026-05-30-fmp-data-loader-design.md  2026-05-31-concept-stock-pool-design.md  2026-05-31-domain-model-loader-refactor-design.md  2026-06-01-hexagonal-arch-and-frontend-design.md  2026-06-07-core-logging-design.md  2026-06-07-signal-radar-design.md  2026-06-13-earnings-call-calendar-design.md
docs/temp/: isogql
frontend/: .npmrc  next.config.ts  package.json  pnpm-lock.yaml
frontend/admin/: index.html  package-lock.json  package.json
frontend/admin/src/: App.tsx  main.tsx
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(pages)/: layout.tsx
frontend/components/charts/: WeightChart.tsx
frontend/components/chat/: ChatInput.tsx  (+2 more)
frontend/hooks/: use-concept.ts  use-market.ts
frontend/lib/: api.ts  types.ts  viz-context.tsx
scripts/: resolve_youtube_handle.py  send_email.py
src/deepalpha/: __init__.py  config.py
tests/: conftest.py  yfinance_api_test.ipynb
tests/contracts/: test_fmp_contracts.py
tests/integration/: test_all_models_coverage.py  test_concept_pipeline.py  test_fmp_integration.py
tests/unit/: test_base.py  test_base_loader.py  test_config.py  test_send_email.py
(+299 files in other folders)
