[project]
name = "deepalpha"
version = "0.1.0"
description = "DeepAlpha L0/L1/L2 Data Pipeline"
requires-python = ">=3.10,<3.14"
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "confluent-kafka>=2.0.0",
    "duckdb>=0.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "yfinance",
    "lxml",
    "notebook>=7.5.6",
    "requests-cache>=1.2.0",
    "requests-ratelimiter",
    "asyncpg>=0.29.0",
    "valkey>=6.0.0",
    "anthropic>=0.40.0",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: 需要真实 FMP API Key 才能运行（使用 -m integration 选择执行）",
]
